--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,13 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.7
+loader_version=0.16.3
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.steakboi.tutorialmod
-archives_base_name=tutorialmod
+maven_group=net.steakboi.pointblankinfiniteammo
+archives_base_name=pointblankinfiniteammo
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
+geckolib_version=4.6.6
